<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/reminder"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:title="@string/daily_reminder"
            android:key="daily_reminder"
            app:iconSpaceReserved="false"
            />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:title="@string/release_reminder"
            android:key="release_reminder"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/language"
        app:iconSpaceReserved="false">
        <Preference
            android:title="@string/change_language"
            android:key="preference_language"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
</PreferenceScreen>